{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 39,
  "lineage": "d16dba61-8887-ea8d-3a25-35bea5f0ad45",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-CORESVC",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-CORESVC",
            "location": "southeastasia",
            "name": "NSG-CORESVC",
            "resource_group_name": "CORE-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.CORE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-MGMT",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-MGMT",
            "location": "southeastasia",
            "name": "NSG-MGMT",
            "resource_group_name": "CORE-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.CORE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-WAF",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-WAF",
            "location": "southeastasia",
            "name": "NSG-WAF",
            "resource_group_name": "CORE-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.CORE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "core-CORESVC-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.48/28",
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-CORESVC-SUBNET",
            "name": "CORE-CORESVC-SUBNET",
            "network_security_group_id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-CORESVC",
            "resource_group_name": "CORE-RG",
            "virtual_network_name": "CORE-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-CORESVC",
            "azurerm_resource_group.CORE",
            "azurerm_virtual_network.Core-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "core-MGMT-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.32/28",
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-MGMT-SUBNET",
            "name": "CORE-MGMT-SUBNET",
            "network_security_group_id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-MGMT",
            "resource_group_name": "CORE-RG",
            "virtual_network_name": "CORE-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-MGMT",
            "azurerm_resource_group.CORE",
            "azurerm_virtual_network.Core-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "core-frondend-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.0/28",
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-FE-AGWAF-SUBNET",
            "name": "CORE-FE-AGWAF-SUBNET",
            "network_security_group_id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-WAF",
            "resource_group_name": "CORE-RG",
            "virtual_network_name": "CORE-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-WAF",
            "azurerm_resource_group.CORE",
            "azurerm_virtual_network.Core-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "core-fw-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.16/28",
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-FW-SUBNET",
            "name": "CORE-FW-SUBNET",
            "resource_group_name": "CORE-RG",
            "virtual_network_name": "CORE-vNET"
          },
          "depends_on": [
            "azurerm_resource_group.CORE",
            "azurerm_virtual_network.Core-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Core-vNet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/24"
            ],
            "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET",
            "location": "southeastasia",
            "name": "CORE-vNET",
            "resource_group_name": "CORE-RG",
            "subnet": [
              {
                "address_prefix": "192.168.0.0/28",
                "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-FE-AGWAF-SUBNET",
                "name": "CORE-FE-AGWAF-SUBNET",
                "security_group": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-MGMT"
              },
              {
                "address_prefix": "192.168.0.16/28",
                "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-FW-SUBNET",
                "name": "CORE-FW-SUBNET",
                "security_group": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-MGMT"
              },
              {
                "address_prefix": "192.168.0.32/28",
                "id": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/virtualNetworks/CORE-vNET/subnets/CORE-MGMT-SUBNET",
                "name": "CORE-MGMT-SUBNET",
                "security_group": "/subscriptions/7accd93c-0ecb-4767-aabc-2b856d78704a/resourceGroups/CORE-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-MGMT"
              }
            ],
            "tags": {
              "environment": "Terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.CORE"
          ]
        }
      ]
    }
  ]
}